--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name cbt.myunical.online. www.cbt.myunical.online;
     root   /var/www/html/public;
     
     index  index.php;
